fix home grid styling on mobile

--- a/site/src/components/HomepageFeatures/styles.module.css
+++ b/site/src/components/HomepageFeatures/styles.module.css
@@ -5,14 +5,27 @@
   width: 100%;
 }
 
-.featureSvg {
+.featureSvgDailies {
   height: 200px;
   width: 200px;
 }
 
-.featureSvgMartyr {
+.featureSvgKilled {
   height: 150px;
   width: 150px;
   margin-top: 25px;
   margin-bottom: 25px;
+}
+
+.featureSvgSummary {
+  height: 170px;
+  width: 170px;
+  margin-top: 15px;
+  margin-bottom: 15px;
+}
+
+@media (max-width: 996px) {
+  .featureButtonImage {
+    margin-top: 20px;
+  }
 }
